public/css/mudos.css
@charset "utf-8";
/* CSS Document */
html,body {height:100%;margin:0; padding:0;} 

body{
    background: url(../image/bg.jpg) 0 0;
    background-color: #000000;
    color:#33F0FF;
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,"Microsoft Yahei",sans-serif;
    font-size: 6px;
}

.bs{border:1px solid #EEC900;margin-top:1px;}
.col-left{
    padding-right:1px;
}
.col-right{
    padding-left:0;
}
.col-both{
    padding-right:1px;
    padding-left:1px;
}
.col-both-clear{
    padding-right:0;
	padding-left:0;
}

.head{
    height:100px;
    padding:8px;
}

/* modal div */
.modal-content{
    background-color: #333333;
	opacity: 0.9;
}

div.row{
	font-size:10px;
}

.input-group input{
	display: table-cell;
	height:20px;
	width: 100%;
	color: black;
}

.myspan{
	display: table-cell;
 	font-size:10px;
	text-align: center;
	vertical-align: middle;
	padding: 0 8px;
	width: 1%;
	white-space: nowrap;
}

.input-group ul{
	background-color:black;
	font-size:8px;
	min-width: 80px;
}

.input-group ul>li{
	color:red;
	padding:2px 10px;
}

/* fight toast */
#fight_toast_popup{
	position:absolute;
	width:99%;
	bottom:0;
	margin-left:-5px;
}

#fight-toast{
/* 	display:none; */
	color:yellow;
	font-size:12px;
	width:100%;
	height:25px;
	line-height:25px;
	overflow: hidden;
	background-color:#333333;
	opacity:0.9;

}

#fight-text{
	width:70%;
	overflow: hidden;
	white-space: nowrap; 
	text-overflow: ellipsis;
	padding-left:5px;
}

.choice{
	float:right;
	margin-right:3px;
}

/* title */
.room-title{
    color:#00FF00;
}
.desc{
    margin-top: 5px;
    color:#00DD00;
	text-indent: 2em;
}
.main{
    
}
.cmd{
    height:100px;
    color:#3300FF;
    overflow-y:auto;
    word-break:break-all;
}
.objs{
    height:208px;
    color:#33F0FF;
    padding:0;
    overflow-y:auto;
    word-break:break-all;
}
.env-objs{
    list-style:none;
    -webkit-padding-start: 0;
    padding:6px;
}
.msglist{
	position:relative;
    color:#9ACD32;
    height:285px;
    overflow-y:scroll;
    word-break:break-all;
    padding:6px;
}
.say{
    height:23px;
}
.msg{
    width:78%;
    height:21px;
	line-height:21px;
	border:0;
    display:inline;
}
.btn-say{
    width:18%;
    height:21px;
    padding:0;
}
.bottom{
    height:120px;
}
.map{
    height:116px;
    border:0;
}
.map table tbody tr td{
    width:30%;
    height:38px;
    text-align:center;
    vertical-align: middle;
    border-color:#EEC900;
    padding:0;
    margin:0;
}
.obj-info{
    height:77px;
    color:#8968CD;
    overflow-y:auto;
    word-break:break-all;
}
.sys-cmd{
    height:37px;
    color:#8B008B;
    text-align:center;
    line-height: 38px;
}
.sys-cmd a{
    color:#8B008B;
}

/* color */
span.blk{color:black;}
span.red{color:red;}
span.grn{color:green;}
span.yel{color:yellow;}
span.blu{color:blue;}
span.mag{color:magenta;}
span.cyn{color:cyan;}
span.wht{color:white;}
span.bold{font-weight:bold;}
span.blink{text-decoration:blink;}

span.hir{color:red;}
span.hig{color:lightgreen;}
span.hiy{color:lightyellow;}
span.hib{color:lightblue;}
span.him{color:magenta;}
span.hic{color:lightcyan;}
span.hiw{color:white;}

span.bblk{background-color:black;}
span.bred{background-color:red;}
span.bgrn{background-color:green;}
span.byel{background-color:yellow;}
span.bblu{background-color:blue;}
span.bmag{background-color:magenta;}
span.bcyn{background-color:cyan;}
span.bwht{background-color:white;}

span.hbred{background-color:red;}
span.hbgrn{background-color:lightgreen;}
span.hbyel{background-color:lightyellow;}
span.hbblu{background-color:lightblue;}
span.hbmag{background-color:magenta;}
span.hbcyn{background-color:lightcyan;}
span.hbwht{background-color:white;}

